fix: wrap items on mobile, update select styles, fix colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --color-primary: #21a0a0;
   --color-secondary: #046865;
   --color-text: #074846;
-  --color-note: #e9f7ee;
+  --color-note: #bbe9cb;
   --color-highlight: #41d070;
   --color-modal: #e9f7ee;
   --color-utility: #d1f0dc;
